salesforce_sfdx/main/default/objects/Knowledge__kav/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Knowledge</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>