salesforce_sfdx/main/default/objects/Knowledge__kav/fields/Priority_Review__c.field-meta.xml
<CustomField>
    <fullName>Priority_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Review</label>
    <type>Checkbox</type>
</CustomField>