salesforce_sfdx/main/default/objects/Knowledge__kav/fields/Related_Articles_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Articles_Type__c</fullName>
    <label>Related Articles Type</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>