salesforce_sfdx/main/default/objects/Knowledge__kav/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>