salesforce_sfdx/main/default/objects/Knowledge__kav/recordTypes/Announcements.recordType-meta.xml
<RecordType>
    <fullName>Announcements</fullName>
    <active>true</active>
    <label>Announcements</label>
</RecordType>