salesforce_sfdx/main/default/objects/Knowledge__kav/recordTypes/Benefits.recordType-meta.xml
<RecordType>
    <fullName>Benefits</fullName>
    <active>true</active>
    <label>Benefits</label>
</RecordType>