salesforce_sfdx/main/default/objects/Knowledge__kav/recordTypes/Forms_and_Letters.recordType-meta.xml
<RecordType>
    <fullName>Forms_and_Letters</fullName>
    <active>true</active>
    <label>Forms and Letters</label>
</RecordType>