salesforce_sfdx/main/default/objects/Knowledge__kav/recordTypes/Procedures.recordType-meta.xml
<RecordType>
    <fullName>Procedures</fullName>
    <active>true</active>
    <label>Procedures</label>
</RecordType>