salesforce_sfdx/main/default/objects/Knowledge__kav/recordTypes/QA.recordType-meta.xml
<RecordType>
    <fullName>QA</fullName>
    <active>true</active>
    <label>QA</label>
</RecordType>