salesforce_sfdx/main/default/objects/Knowledge__kav/recordTypes/Resources.recordType-meta.xml
<RecordType>
    <fullName>Resources</fullName>
    <active>true</active>
    <label>Resources</label>
</RecordType>