salesforce_sfdx/main/default/objects/Knowledge__kav/recordTypes/Troubleshooting.recordType-meta.xml
<RecordType>
    <fullName>Troubleshooting</fullName>
    <active>true</active>
    <label>Troubleshooting</label>
</RecordType>